--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="container">
             <div class="content" data-aos="fade-up">
                 <p class="above-title mb-16">My name is</p>
-                <h1 class="full-name">Alex <span class="primary">Smith.</span></h1>
-                <p class="about">Creative front-end developer with more than +5 years of experience in enterprise companies and startups.  Proficient in JavaScript, Angular, and React. Passionate about UI/UX</p>
+                <h1 class="full-name">Ifeoluwa <span class="primary">Faleye.</span></h1>
+                <p class="about">Astute Business Intelligence Analyst with 4+ years of experience gathering and dissecting data to gain actionable insights. Adept at understanding business needs and recommending data-driven solutions to streamline operations, reduce costs, and boost revenue. Savvy communicator known for building consensus and aligning stakeholders. Proficient in Python, SQL, and Tableau.</p>
                 <a href="assets/resume.pdf" target="_blank" class="btn btn-outline-light download-resume-mobile">Download Resume</a>
                 <ul class="social-icons">
                     <li>
@@ -106,7 +106,7 @@
                         <use xlink:href="assets/img/sprite.svg#lines-vector"></use>
                     </svg>
                 </div>
-                <img class="avatar" src="assets/img/avatar.png" alt="Alex Smith">
+                <img class="avatar" src="assets/img/avatar.png" alt="Ifeoluwa Faleye">
             </div>
         </div>
     </section>
@@ -125,7 +125,7 @@
                             <use xlink:href="assets/img/sprite.svg#ux-service"></use>
                         </svg>
                     </div>
-                    <h4 class="title">UI/UX Design</h4>
+                    <h4 class="title">Data Analysis </h4>
                     <p class="body">Turn what you have in mind of a digital product into reality. For any platform you consider.</p>
                 </div>
                 <div class="service-item" data-aos="fade-up" data-aos-delay="250">
@@ -580,3 +580,4 @@
 <script src="assets/js/unfetch.js"></script>
 <script src="./script.js"></script>
 </html>
+
